<resources>
    <string name="app_name">NoteKeeper</string>
    <string name="action_settings">Settings</string>
    <string name="note_title">Note title</string>
    <string name="note_text">Note text</string>
    <string name="title_activity_note">Edit Note</string>
    <string name="send_as_email">Send as email</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="title_activity_main">NoteKeeper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="clip_board">clip</string>
    <string name="slideshow">slideShow</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">User Details</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="pref_default_display_name">Your Name</string>
    <string name="pref_title_display_name">Display Name</string>
    <string name="pref_title_email_address">Email address</string>
    <string name="pref_default_email_address">john.doe@example.com</string>
    <string name="pref_title_favourite_social">Favorite Social Network</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="pref_default_favorite_social">http://plus.google.com</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

</resources>
